unpackaged/main/default/objects/Registration_Card__c/Registration_Card__c.object-meta.xml
<CustomObject>
    <label>Registration Card</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>