unpackaged/main/default/objects/Registration_Card__c/fields/Home_many_bedrooms_do_you_need__c.field-meta.xml
<CustomField>
        <fullName>Home_many_bedrooms_do_you_need__c</fullName>
        <label>Home many bedrooms do you need?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>