unpackaged/main/default/objects/Registration_Card__c/fields/Home_To_Sell__c.field-meta.xml
<CustomField>
        <fullName>Home_To_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have a home to sell</label>
        <type>Checkbox</type>
    </CustomField>