unpackaged/main/default/objects/Registration_Card__c/fields/Home_Type__c.field-meta.xml
<CustomField>
        <fullName>Home_Type__c</fullName>
        <label>What type of home are you looking for?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Two-storey</fullName>
                </value>
                <value>
                    <fullName>Bungalow</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>