unpackaged/main/default/objects/Registration_Card__c/fields/Move_In_Timeframe__c.field-meta.xml
<CustomField>
        <fullName>Move_In_Timeframe__c</fullName>
        <label>When are you planning to move?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6+ months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>