unpackaged/main/default/objects/Registration_Card__c/fields/Opportunity__c.field-meta.xml
<CustomField>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Registration Cards</relationshipLabel>
        <relationshipName>Registration_Cards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>