unpackaged/main/default/objects/Registration_Card__c/recordTypes/Denver_Registration_Card.recordType-meta.xml
<RecordType>
        <fullName>Denver_Registration_Card</fullName>
        <active>true</active>
        <label>Denver Registration Card</label>
    </RecordType>