unpackaged/main/default/objects/Registration_Card__c/recordTypes/Toronto_Registration_Card.recordType-meta.xml
<RecordType>
        <fullName>Toronto_Registration_Card</fullName>
        <active>true</active>
        <label>Toronto Registration Card</label>
    </RecordType>